# SatoriTab

./: README.md  SatoriTab.cabal  TODO.md  output  stack.yaml
output/: all.js  lib.js  out.js  out.stats
src/: Lib.hs
