name:                SatoriTab
version:             0.1.0.0
synopsis:            Generator für Bibliotheken im Rollenspiel "Das Schwarze Auge"
description:         Please see README.md
homepage:            http://github.com/Drezil/SatoriTab#readme
license:             Apache V2.0
license-file:        LICENSE
author:              Stefan Dresselhaus
maintainer:          sdressel@techfak.uni-bielefeld.de
copyright:           2015 Stefan Dresselhaus
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
  default-language:    Haskell2010

executable SatoriTab-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , SatoriTab
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Drezil/SatoriTab
